--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -18,15 +13,12 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.formbox {
+  margin: 10px;
+  width: 300px;
+}
+.resetButton {
+  width: 200px;
+  background-color: limegreen
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
